# rhopca

./: .gitignore  README.md  pyproject.toml
examples/: example.ipynb
src/rhopca/: core.py
